# ml-metabolomics

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
Metabolomics_ML/: __main__.py
Metabolomics_ML/algorithms/: nipals.py
Metabolomics_ML/base/: data.py  entry.py
Metabolomics_ML/gui/: gui.py
Metabolomics_ML/pca/: PCA_2class.py  __init__.py  data.py  plsda.py
Metabolomics_ML/pls/: __init__.py  opls.py  oplsda.py  plsda.py
Metabolomics_ML/r_script/: PCA_2class_report.R
Metabolomics_ML/tex_template/: report.tex  report_complete.tex  report_generator.py  report_plot_funcs.py
Metabolomics_ML/thesis/pickles/: plsda_n2_7.pkl  plsda_n2_7_pareto.pkl  plsda_n2_9_range.pkl  plsda_n8_14_pareto.pkl
Metabolomics_ML/validation/: __init__.py  bootstrap.py  crossval.py  metrics.py
pca/: PCA_2class.py  main.py
pca/gui/: gui.py
pca/pca/: PCA_2class.py
pca/tex_template/: report.tex  report_complete.tex  report_generator.py  report_plot_funcs.py
tests/: iris.csv  mtcars.csv  mtcars_og.csv  test.py  test_data.csv  wine.csv
